fix horizontal overflow problem

--- a/app/assets/stylesheets/disco_app/disco/_cards.scss
+++ b/app/assets/stylesheets/disco_app/disco/_cards.scss
@@ -6,6 +6,7 @@
   background-color: #ffffff;
   border-radius: 3px;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  overflow-x: auto;
 }
 
 .next-card ~ .next-card {
